# AI-JSON-Serializer

./: .env.example  .gitignore  config.ini.example  pyproject.toml
examples/: chat.py  normalize.py
schema/: common.yaml
schema/prompts/: detect_headers.txt  generate.txt  review.txt
src/: ai_mapper.py  client.py  config.py  errors.py  excel_reader.py  models.py  pipeline.py
src/schema/: __init__.py  loader.py  models.py  normalizer.py
